--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="usage-bar">Daily Limit: <span id="used" class="usage-count">0</span> / 30 Operations</div>
 
     <div class="api-box">
-        <label style="margin-top:0; color:#444;">GEMINI API KEY (Saved Locally)</label>
+        <label style="margin-top:0; color:#444;">Enter your Key</label>
         <input type="password" id="apiKey" placeholder="Paste Key Here...">
     </div>
 
